Bugfix: Play next/last unreadable in some themes
git-svn-id: svn://svn.code.sf.net/p/subsonic/code/trunk@3613 104adb81-38d2-4886-885e-82898e39ce25

--- a/subsonic-main/src/main/webapp/style/default.css
+++ b/subsonic-main/src/main/webapp/style/default.css
@@ -249,3 +249,7 @@ img {
 .ruleTableHeader {
     font-weight: bold;
 }
+
+.context-menu-item {
+    color: black;
+}
